# Projet_Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: main.rs
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  state.rs  themes.rs  ui.rs
frontend/src/screens/: mod.rs  screenAuth.rs  screenBilling.rs  screenDashboard.rs  screenNotifications.rs  screenProject.rs  screenTasks.rs
migrations/: 001_create_users_table.sql  002_create_projects_table.sql  003_create_tasks_table.sql  004_create_billing_tables.sql  005_create_notifications_table.sql
services/billing-service/: Cargo.toml  Dockerfile
services/billing-service/src/: handlers.rs  lib.rs  main.rs  models.rs
services/notification-service/: Cargo.toml  Dockerfile
services/notification-service/src/: handlers.rs  lib.rs  main.rs  models.rs
services/project-service/: Cargo.toml  Dockerfile
services/project-service/src/: handlers.rs  lib.rs  main.rs  models.rs
services/project-service/src/handlers/: project.rs  task.rs
services/taks-service/: Cargo.toml
services/tasks-service/: Cargo.toml  Dockerfile
services/tasks-service/src/: handlers.rs  main.rs  models.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
services/user-service/src/handlers/: auth.rs  user.rs
shared/: Cargo.toml
shared/src/: auth.rs  database.rs  errors.rs  lib.rs  models.rs
