[workspace]
members = [
    "shared",
    "services/user-service",
    "services/project-service",
    "services/billing-service",
    "services/notification-service",
    "api-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mini-SaaS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = "1"
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"
regex = "1"
lazy_static = "1.4"
