[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
egui = "0.28"
eframe = "0.28"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
